# remoroo

./: .gitignore  CLI_README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docker-publish.yml
remoroo/: auth.py  cli.py  configs.py  http_transport.py  run_local.py  worker_cmd.py
remoroo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
remoroo/engine/: local_worker.py  sandbox.py
remoroo/engine/core/: command_discovery.py  context_packer.py  env_setup.py  executor.py  repo_indexer.py
remoroo/engine/utils/: configs.py
remoroo/execution/: env_doctor.py  repo_manager.py
scripts/: deploy.sh
tests/: __init__.py
